# Components

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.rst  components.py  gulpfile.js  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  setup.cfg  tsconfig.json
components/: apps.py  settings.py  urls_test.py  views_test.py
components/locale/fr/LC_MESSAGES/: djangojs.mo  djangojs.po
components/static/components/js/: ajax.ts  app.js  app.min.js  createAssignment.tsx  createQuestion.tsx  createQuestions1.tsx  createQuestions2.tsx  createStudentGroup.tsx  dashboard.jsx  dashboard.tsx  dashboardInvitedUser.tsx  dashboardNewUser.tsx  dashboardStudent.tsx  data.js  data.ts  detailedAssignment.tsx  functions.jsx  functions.tsx  library.tsx  navigation.jsx  navigation.tsx  rationales.tsx  search.jsx  search.tsx  styledComponent.js  styledComponents.js  styledComponents.ts  styleguide.tsx  theme.js  theme.ts  types.d.ts  updateAssignment.tsx  updateGroup.tsx  updateProfile.tsx  utils.js  validators.tsx
components/static/components/js/_assignments/: copyModal.tsx  distributeModal.tsx  generalDescription.tsx  htmlTextBox.tsx  shareModal.tsx  styles.js  textBox.tsx  toolbar.tsx  types.d.ts
components/static/components/js/_dashboard/: invitedUserBar.jsx  invitedUserBar.tsx  newUserBar.jsx  newUserBar.tsx  superUserBar.jsx  superUserBar.tsx  types.d.ts
components/static/components/js/_localComponents/: assigment.jsx  assigment.tsx  assigmentStudent.jsx  assigmentStudentCompleted.jsx  assigment_bis.jsx  assignment.tsx  assignmentStudent.tsx  assignmentStudentCompleted.tsx  assignment_bis.tsx  collection.jsx  collection.tsx  enum.ts  group.jsx  group.tsx  groupStudent.jsx  groupStudent.tsx  question.jsx  question.tsx  rationales.tsx  searchDropdown.jsx  studentgroupsassignment.tsx  types.d.ts
components/static/components/js/_navigation/: dashboard.jsx  drawer.jsx  drawer.tsx  header.jsx  header.tsx  headerDropdown.jsx  menu.tsx  navigationDropdown.jsx  profileDropdown.jsx  search.jsx  types.d.ts
components/static/components/js/_profile/: profile.tsx
components/static/components/js/_questions/: answer.tsx  collaborators.tsx  content.tsx  index.ts  indexing.tsx  settings.tsx
components/static/components/js/_reusableComponents/: clipboard.tsx  (+27 more)
components/static/components/questions/: answer.tsx  collaborators.tsx  content.tsx  saveBar.tsx  settings.tsx
components/templates/components/: createAssignment.html  createQuestions1.html  createQuestions2.html  dashboardInvitedUser.html  dashboardNewUser.html  dashboardStudent.html  detailedAssignment.html  index.html  meta.html  navigationJS.html  rationales.html  search.html
(+21 files in other folders)
