[metadata]
name = SALTISE_components
version = 0.2.10
description = A Django app to build and test a collection of front-end components for myDALITE
long_description = file: README.rst
author = Jonathon Sumner
author_email = jsumner@dawsoncollege.qc.ca
license = LICENSE.txt
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires=
    django >= 2.2, <=3.3
